--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                   <p>Applied simple JS knowledge on practice</p>
                 </div>
                 <div class="projects-right_item">
-                  <a href="https://neo-gear-e-commerce.netlify.app/" target="_blank"><img src="./images/e-commerce.jpg" alt="Project Nr.3"></a>
+                  <a href="https://e-commerce-onlineshop.netlify.app/" target="_blank"><img src="./images/e-commerce.jpg" alt="Project Nr.3"></a>
                   <h4>E-commerce Website</h4>
                   <p>Built an e-commerce project based on prototypes</p>
                 </div>
