changed skill item

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         <span class="skills-item">HTML</span>
                         <span class="skills-item">CSS</span>
                         <span class="skills-item">JavaScript</span>
-                        <span class="skills-item">Python</span>
+                        <span class="skills-item">React</span>
                         <span class="skills-item">C/C++</span>
                     </div>
                 </div>
